--- a/src/app/liste-fournisseurs/liste-fournisseurs.component.css
+++ b/src/app/liste-fournisseurs/liste-fournisseurs.component.css
@@ -1,6 +1,9 @@
 h1 {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  padding-top: 60px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+
 }
 
 ul {
