--- a/src/app/add-fournisseur/add-fournisseur.component.css
+++ b/src/app/add-fournisseur/add-fournisseur.component.css
@@ -2,6 +2,8 @@ h1 {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 2rem;
+  padding-top: 60px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+
 }
 
 form {
