Cleanup code, ajout de la page de liste de devices

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,5 +4,5 @@
     <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
     <a routerLink="/message/index">Liste des messages</a>
     <a routerLink="/message/create">Ajouter un message</a>
-    <a routerLink="/devices">Liste des devices</a>
+    <a routerLink="/liste-devices">Liste des devices</a>
   </nav>
