--- a/src/app/post/index/index.component.html
+++ b/src/app/post/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>SMS Recovery Web App</h1>
+    <h1>Liste des messages</h1>
   
     <a href="#" routerLink="/message/create/" class="btn btn-success">Ajouter un message</a>
     
