Changement des catégories dans Listing devices

--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -4,9 +4,8 @@
     
     <table class="table table-bordered" style="text-align: center;">
       <tr>
-        <th>Date </th>
         <th>Fournisseur </th>
-        <th>Nom du device </th>
+        <th>Nom Device </th>
         <th>Libellé </th>
       </tr>
 
