--- a/src/app/liste-fournisseurs/liste-fournisseurs.component.css
+++ b/src/app/liste-fournisseurs/liste-fournisseurs.component.css
@@ -1,8 +1,8 @@
-h1 {
+/*h1 {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 2rem;
-  padding-top: 60px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+  padding-top: 60px; / Ajout de padding-top pour pousser l'élément sous la navbar /
 
 }
 
@@ -17,4 +17,13 @@ li {
   border: 1px solid #ccc;
   padding: 0.5rem;
   border-radius: 0.25rem;
+}
+
+*/
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  padding-top: 60px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+
 }
