--- a/src/app/liste-fournisseurs/liste-fournisseurs.component.html
+++ b/src/app/liste-fournisseurs/liste-fournisseurs.component.html
@@ -10,7 +10,7 @@
 <div class="container">
   <h1>Liste des fournisseurs</h1>
 
-  <a href="#" routerLink="/message/create/" class="btn btn-success">Ajouter un message</a>
+  <a href="#" routerLink="/message/create/" class="btn btn-success">Ajouter un fournisseur</a>
   
   <table class="table table-bordered" style="text-align: center;">
     <tr>
