--- a/src/app/post/index/index.component.html
+++ b/src/app/post/index/index.component.html
@@ -17,9 +17,9 @@
         <td>{{ post.title }}</td>
         <td>{{ post.body }}</td>
         <td>
-          <a href="#" [routerLink]="['/message/', post.id, 'view']" class="btn btn-info">View</a>
-          <a href="#" [routerLink]="['/message/', post.id, 'edit']" class="btn btn-primary">Edit</a>
-          <button type="button" (click)="deletePost(post.id)" class="btn btn-danger">Delete</button>
+          <a href="#" [routerLink]="['/message/', post.id, 'view']" class="btn btn-info">Voir</a>
+          <a href="#" [routerLink]="['/message/', post.id, 'edit']" class="btn btn-primary">Éditer</a>
+          <button type="button" (click)="deletePost(post.id)" class="btn btn-danger">Supprimer</button>
         </td>
       </tr>
     </table>
