--- a/src/app/post/view/view.component.html
+++ b/src/app/post/view/view.component.html
@@ -1,19 +1,25 @@
 <div class="container">
-    <h1>View Post</h1>
+    <h1>Afficher le message</h1>
   
-    <a href="#" routerLink="/message/index" class="btn btn-primary">Back</a>
+    <a href="#" routerLink="/message/index" class="btn btn-primary">Retour</a>
+
+    <br>
    
-    <div>
+    <div style="text-align: center;">
         <strong>Date :</strong>
         <p>{{ post.id }}</p>
     </div>
-   
-    <div>
+
+    <br>
+
+    <div style="text-align: center;">
         <strong>IP :</strong>
         <p>{{ post.title }}</p>
     </div>
    
-    <div>
+    <br>
+
+    <div style="text-align: center;">
         <strong>Contenu :</strong>
         <p>{{ post.body }}</p>
     </div>
