--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,3 +5,12 @@ h1 {
     padding-top: 70px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
   
   }
+
+  h2 {
+    font-size: 1.5rem;
+    color: gray;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding-top: 70px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+  
+  }
