--- a/src/app/post/create/create.component.css
+++ b/src/app/post/create/create.component.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
     font-size: 2rem;
     text-align: center;
@@ -5,3 +11,20 @@ h1 {
     padding-top: 70px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
   
   }
+
+  .btn-primary {
+
+    padding: 0.5rem 10rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #0d6efd;
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .btn-primary:hover {
+    background-color: #0a58ca;
+  }
+  
