--- a/src/app/post/create/create.component.html
+++ b/src/app/post/create/create.component.html
@@ -1,8 +1,10 @@
 <div class="container">
     <h1>Ajouter un message</h1>
   
-    <a href="#" routerLink="/message/index" class="btn btn-primary">Back</a>
+    <a href="#" routerLink="/message/index" class="btn btn-primary">Retour</a>
         
+    <br>
+
     <form [formGroup]="form" (ngSubmit)="submit()">
   
         <div class="form-group">
@@ -18,7 +20,7 @@
         </div>
   
         <div class="form-group">
-            <label for="body">Contenu</label>
+            <label for="body">Contenu :</label>
             <textarea 
                 formControlName="body"
                 id="body" 
@@ -30,6 +32,8 @@
             </div>
         </div>
   
-        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+        <br>
+
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Ajouter</button>
     </form>
 </div>
