--- a/src/app/add-fournisseur/add-fournisseur.component.html
+++ b/src/app/add-fournisseur/add-fournisseur.component.html
@@ -1,8 +1,8 @@
 <h1>Ajouter un fournisseur</h1>
 
 <form>
-  <label>Nom du fournisseur :</label>
-  <input type="text" name="nom">
+  <label>Nom du fournisseur</label>
+  <input type="text" name="nom" [(ngModel)]="model.name">
 
-  <button type="submit">Ajouter</button>
+  <button class="btn btn-primary" [disabled]="!model.name" (click)="addNewModel()">Ajouter</button>
 </form>
