ajout commentaire pour fonctionnalité future

--- a/src/app/liste-fournisseurs/liste-fournisseurs.component.html
+++ b/src/app/liste-fournisseurs/liste-fournisseurs.component.html
@@ -18,12 +18,14 @@
       <td>{{ items.name }}</td>
       <td>
         <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'view']" class="btn btn-info">Voir</a> 
-        <!-- changer la route -->
+        <!-- faire fonctionner la route -->
         <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'edit']" class="btn btn-primary">Éditer</a>
-        <!-- changer la route -->
+        <!-- faire fonctionner la route -->
          <button type="button"
          class="btn btn-danger">Supprimer</button>
               <!-- (click)="deletePost(items.id)" --> 
+                       <!-- <button type="button" (click)="deletePost(items.id)" class="btn btn-danger">Supprimer</button> -->
+
       </td>
     </tr>
   </table>
