affichage des noms des fournisseurs + placeholder device et libellé

--- a/src/app/items/liste-fournisseurs/index/index.component.html
+++ b/src/app/items/liste-fournisseurs/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Liste des fournisseurs</h1>
+  <h1>Index des fournisseurs</h1>
 
   <a href="#" routerLink="/add-fournisseur/" class="btn btn-success">Ajouter un fournisseur</a>
 
