--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -1,13 +1,30 @@
 <div class="container">
     <h1>Liste des devices</h1>
   
-    
-    <table class="table table-bordered" style="text-align: center;">
+
+    <table *ngIf="items" class="table table-bordered" style="text-align: center;">
       <tr>
         <th>Fournisseur </th>
         <th>Nom Device </th>
         <th>Libellé </th>
+        <th width="220px">Action</th>
       </tr>
-
+      <tr *ngFor="let items of items">
+        <td>{{ items.name }}</td>
+        <td>{{ items.device }}</td>
+        <td>{{ items.id }}</td>
+        <td>
+        
+          <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'view']" class="btn btn-info">Voir</a> 
+          <!-- faire fonctionner la route -->
+          <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'edit']" class="btn btn-primary">Éditer</a>
+          <!-- faire fonctionner la route -->
+           <button type="button"
+           class="btn btn-danger">Supprimer</button>
+                <!-- (click)="deletePost(items.id)" --> 
+                         <!-- <button type="button" (click)="deletePost(items.id)" class="btn btn-danger">Supprimer</button> -->
+  
+        </td>
+      </tr>
     </table>
  </div>
