installed font awesome 4

--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -5,8 +5,8 @@
     <table *ngIf="items" class="table table-bordered" style="text-align: center;">
       <tr>
         <th>Fournisseur </th>
-        <th>Nom Device </th>
         <th>Libellé </th>
+        <th>Ip Device  </th>
         <th width="220px">Action</th>
       </tr>
       <tr *ngFor="let items of items">
