--- a/src/app/post/index/index.component.html
+++ b/src/app/post/index/index.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <h1>Liste des messages</h1>
   
+    <p style="text-align: center;" *ngIf="items === null">Chargement en cours... </p>
+
     <a href="#" routerLink="/message/create/" class="btn btn-success">Ajouter un message</a>
 
     <br>
