--- a/src/app/devices/liste-devices.component.css
+++ b/src/app/devices/liste-devices.component.css
@@ -1,7 +1,77 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    padding-top: 70px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
-  
-  }
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  padding-top: 70px; /* Added padding-top to push element below navbar */
+}
+
+.btn-success {
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #407900;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.btn-success:hover {
+  background-color: #1f1f1f;
+}
+
+table {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+th, td {
+  padding: 0.5rem;
+}
+
+th {
+  background-color: #eee;
+}
+
+.btn-action {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 5px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.btn-action:hover {
+  background-color: #0056b3;
+}
+
+.btn-action i {
+  margin-right: 0.5rem;
+}
+
+.btn-action.btn-view {
+  background-color: #28a745;
+}
+
+.btn-action.btn-edit {
+  background-color: #ffc107;
+}
+
+.btn-action.btn-delete {
+  background-color: #dc3545;
+}
+
