--- a/src/app/items/liste-fournisseurs/index/liste-fournisseurs.component.css
+++ b/src/app/items/liste-fournisseurs/index/liste-fournisseurs.component.css
@@ -4,30 +4,14 @@
   align-items: center;
 }
 
-/* ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-} */
-
-/* li {
-  margin-bottom: 0.5rem;
-  border: 1px solid #ccc;
-  padding: 0.5rem;
-  border-radius: 0.25rem;
-} */
-
-
 h1 {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 2rem;
-  padding-top: 70px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
-
+  padding-top: 70px; /* Added padding-top to push element below navbar */
 }
 
 .btn-success {
-
   padding: 0.5rem 1rem;
   border-radius: 5px;
   border: none;
@@ -42,25 +26,52 @@ h1 {
   background-color: #1f1f1f;
 }
 
-
-
-/* .btn-success {
-  padding: 0.5rem 1rem !important;
-  border-radius: 5px;
-  border: none;
-  margin: 100px;
-  display: flex;
+table {
+  margin-top: 2rem;
   text-align: center;
-  justify-content: center;
+}
+
+th, td {
+  padding: 0.5rem;
+}
+
+th {
+  background-color: #eee;
+}
+
+.btn-action {
+  display: inline-flex;
   align-items: center;
-  height: 50px;
-  background-color: #407900;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 5px;
+  background-color: #007bff;
   color: #fff;
   font-size: 1.2rem;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
-.btn-success[type="submit"]:hover {
-  background-color: #1f1f1f;
-} */
+.btn-action:hover {
+  background-color: #0056b3;
+}
+
+.btn-action i {
+  margin-right: 0.5rem;
+}
+
+.btn-action.btn-view {
+  background-color: #28a745;
+}
+
+.btn-action.btn-edit {
+  background-color: #ffc107;
+}
+
+.btn-action.btn-delete {
+  background-color: #dc3545;
+}
+
