--- a/src/app/items/liste-fournisseurs/index/liste-fournisseurs.component.html
+++ b/src/app/items/liste-fournisseurs/index/liste-fournisseurs.component.html
@@ -18,10 +18,10 @@
       <td>{{ items.name }}</td>
       <td>
         <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'view']" class="btn btn-info">Voir</a> 
-        <!-- faire fonctionner la route / Ajouter bouton Font Awesome 4  -->
+        <!-- Ajouter bouton Font Awesome 4  -->
         <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'edit']" class="btn btn-primary">Éditer</a>
-        <!-- faire fonctionner la route -->
-         <button type="button"
+        <!-- Ajouter bouton Font Awesome 4  -->
+        <button type="button"
          class="btn btn-danger">Supprimer</button>
               <!-- (click)="deletePost(items.id)" --> 
                        <!-- <button type="button" (click)="deletePost(items.id)" class="btn btn-danger">Supprimer</button> -->
