ajout fonctionnalité d'édition

--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -16,7 +16,7 @@
         <td>{{ items.id }}</td>
         <td>
         
-          <a href="#" [routerLink]="['/liste-fournisseurs/', items.id, 'view']" class="btn btn-info">Voir</a> 
+          <a href="#" [routerLink]="['/liste-devices/', items.id, 'view']" class="btn btn-info">Voir</a> 
          
         </td>
       </tr>
