--- a/src/app/items/liste-fournisseurs/edit/edit.component.html
+++ b/src/app/items/liste-fournisseurs/edit/edit.component.html
@@ -7,14 +7,14 @@
 
     <div style="text-align: center;">
         <strong> Nom :</strong>
-        <p class="form-control">[(ngModel)]="item.name"</p>
+        <input class="form-control" [(ngModel)]="item.name">
     </div>
 
     <br>
 
     <div style="text-align: center;">
         <strong> Device :</strong>
-        <p class="form-control">[(ngModel)]="item.device"</p>
+        <input class="form-control" [(ngModel)]="item.device">
     </div>
   
     <br>
