cleanup css + Rework Afficher le fournisseur view

--- a/src/app/items/liste-fournisseurs/view/view.component.html
+++ b/src/app/items/liste-fournisseurs/view/view.component.html
@@ -8,14 +8,14 @@
 
     <div style="text-align: center;">
         <strong>IP :</strong>
-        <p *ngIf="item">{{ item.id }}</p>
+        <p class="form-control" readonly *ngIf="item">{{ item.id }}</p>
     </div>
 
     <br>
 
     <div style="text-align: center;">
         <strong>Nom :</strong>
-        <p *ngIf="item">{{ item.name }}</p>
+        <p class="form-control" readonly *ngIf="item">{{ item.name }}</p>
     </div>
 
 </div>
