ongoing code for confirmation window popup, added functions

--- a/src/app/items/liste-fournisseurs/dialogs/confirm/confirm.component.html
+++ b/src/app/items/liste-fournisseurs/dialogs/confirm/confirm.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="header">
     <button mat-icon-button [mat-dialog-close]="false">
         <mat-icon>close</mat-icon>
@@ -16,4 +16,4 @@
     <button mat-raised-button color="primary" [mat-dialog-close]="true">
         {{data?.confirmCaption}}
     </button>
-</div>
+</div> -->
