--- a/src/app/items/liste-fournisseurs/index/liste-fournisseurs.component.html
+++ b/src/app/items/liste-fournisseurs/index/liste-fournisseurs.component.html
@@ -23,7 +23,7 @@
         <!-- Ajouter bouton Font Awesome 4  -->
         <button type="button"
          class="btn btn-danger">Supprimer</button>
-             <!--       <button type="button" (click)="deleteFournisseur(items.id)" class="btn btn-danger">Supprimer</button>     --> 
+         <button type="button" class="btn btn-danger" (click)="confirmDelete(items?.id)">Supprimer</button>
 
       </td>
     </tr>
