--- a/src/app/devices/view/view.component.html
+++ b/src/app/devices/view/view.component.html
@@ -7,15 +7,15 @@
     <br>
 
     <div style="text-align: center;">
-        <strong>IP :</strong>
-        <p *ngIf="item">{{ item.id }}</p>
+        <strong>Ip Device :</strong>
+        <p class="form-control" readonly *ngIf="item">{{ item.id }}</p>
     </div>
 
     <br>
 
     <div style="text-align: center;">
-        <strong>Nom :</strong>
-        <p *ngIf="item">{{ item.name }}</p>
+        <strong>Fournisseur	 :</strong>
+        <p class="form-control" readonly *ngIf="item">{{ item.name }}</p>
     </div>
 
 </div>
