--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <nav>
-    <a routerLink="/home">Accueil</a>
-    <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
-    <a routerLink="/liste-fournisseurs">Liste des fournisseurs</a>   
-    <a routerLink="/message/create">Ajouter un message</a>
-    <a routerLink="/message/index">Liste des messages</a>
-    <a routerLink="/liste-devices">Liste des devices</a>
-  </nav>
+  <a routerLink="/home">Accueil</a>
+  <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
+  <a routerLink="/liste-fournisseurs">Liste des fournisseurs</a>
+  <a routerLink="/message/create">Ajouter un message</a>
+  <a routerLink="/message/index">Liste des messages</a>
+  <a routerLink="/liste-devices">Liste des devices</a>
+  <button (click)="toggleDarkTheme()">Toggle Light/Dark mode</button>
+</nav>
