--- a/src/styles.css
+++ b/src/styles.css
@@ -86,7 +86,16 @@ body {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 2rem;
-    padding-top: 70px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+    padding-top: 100px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
+  
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    color: gray;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding-top: 50px; /* Ajout de padding-top pour pousser l'élément sous le h1 */
   
   }
   
