--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -1,23 +1,23 @@
 <div class="container">
     <h1>Liste des devices</h1>
-  
+
     <p style="text-align: center;" *ngIf="items === null">Chargement en cours... </p>
 
     <table *ngIf="items" class="table table-bordered" style="text-align: center;">
       <tr>
         <th>Fournisseur </th>
         <th>Libellé </th>
-        <th>Ip Device  </th>
+        <th>Url du device</th>
         <th width="220px">Action</th>
       </tr>
       <tr *ngFor="let items of items">
-        <td>{{ items.name }}</td>
-        <td>{{ items.device }}</td>
         <td>{{ items.id }}</td>
+        <td>{{ items.url }}</td>
+        <td>{{ items.name }}</td>
         <td>
-        
-          <a href="#" [routerLink]="['/liste-devices/', items.id, 'view']" class="btn btn-info">Voir</a> 
-         
+
+          <a href="#" [routerLink]="['/liste-devices/', items.id, 'view']" class="btn btn-info">Voir</a>
+
         </td>
       </tr>
     </table>
