--- a/src/app/post/create/create.component.html
+++ b/src/app/post/create/create.component.html
@@ -9,6 +9,11 @@
   
         <div class="form-group">
             <label for="title">IP:</label>
+            <!-- <label>Nom du fournisseur</label>
+            <input type="text" name="nom" [(ngModel)]="model.name">
+          
+            <button routerLink="/liste-fournisseurs/" class="btn btn-primary" [disabled]="!model.name" (click)="addNewModel()">Ajouter</button>
+           -->
             <input 
                 formControlName="title"
                 id="title" 
