fix fournisseurs labels

--- a/src/app/items/liste-fournisseurs/edit/edit.component.html
+++ b/src/app/items/liste-fournisseurs/edit/edit.component.html
@@ -6,14 +6,14 @@
     <br>
 
     <div style="text-align: center;">
-        <strong> Nom :</strong>
+        <strong> Url :</strong>
         <input class="form-control" [(ngModel)]="item.name">
     </div>
 
     <br>
 
     <div style="text-align: center;">
-        <strong> Url :</strong>
+        <strong> Libellé :</strong>
         <input class="form-control" [(ngModel)]="item.url">
     </div>
 
