--- a/src/app/items/liste-fournisseurs/view/view.component.html
+++ b/src/app/items/liste-fournisseurs/view/view.component.html
@@ -14,7 +14,7 @@
     <br>
 
     <div style="text-align: center;">
-        <strong>Nom :</strong>
+        <strong>Url :</strong>
         <p class="form-control" readonly *ngIf="item">{{ item.name }}</p>
     </div>
 
