--- a/src/app/post/create/create.component.html
+++ b/src/app/post/create/create.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Ajouter un message</h1>
+    <h1>Ajouter un device</h1>
   
     <a href="#" routerLink="/message/index" class="btn btn-primary">Retour</a>
         
