--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,16 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 
-/* Add application styles & imports to this file! */
 nav {
     position: fixed; /* Permet de fixer la navbar */
     top: 0; /* Place la navbar tout en haut de la page */
@@ -24,7 +29,6 @@ nav {
 }
 
 
-  
 nav a {
     float: left; /* Permet d'aligner les éléments à gauche */
     color: var(--bkg-color); /* Couleur du texte */
@@ -33,113 +37,110 @@ nav a {
     text-decoration: none; /* Suppression du soulignement */
     font-size: 18px; /* Taille de police */
     margin-right: 10px;
-  }
-  
-  nav a:hover {
+}
+
+nav a:hover {
     background-color: #ddd; /* Couleur de fond au survol */
     color: black; /* Couleur du texte au survol */
     color: #666;
 
-  }
-  
-  nav a.active {
+}
+
+nav a.active {
     background-color: #4CAF50; /* Couleur de fond de l'élément actif */
     color: white; /* Couleur du texte de l'élément actif */
-  }
+}
 
-
-
-  
 
 body {
     --text-color: #222;
     --bkg-color: #fff;
     --btn-txt-color: white;
     --btn-bg-color: #333;
-  }
-  body.dark-theme {
+}
+
+body.dark-theme {
     --text-color: #eee;
     --bkg-color: #252222;
     --btn-txt-color: rgb(46, 43, 43);
     --btn-bg-color: rgb(20, 211, 138);
-  }
-  
-  body {
+}
+
+body {
     background: var(--bkg-color);
-  }
-  
-  h1,
-  p {
+}
+
+h1,
+p {
     color: var(--text-color);
-  }
-  button {
+}
+
+button {
     padding: 10px;
     border: none;
     border-radius: 2px;
     color: var(--btn-txt-color);
     background-color: var(--btn-bg-color);
-  }
-  
+}
 
 
-  h1 {
+h1 {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 2rem;
     padding-top: 100px; /* Ajout de padding-top pour pousser l'élément sous la navbar */
-  
-  }
 
-  h2 {
+}
+
+h2 {
     font-size: 1.5rem;
     color: gray;
     text-align: center;
     margin-bottom: 2rem;
     padding-top: 50px; /* Ajout de padding-top pour pousser l'élément sous le h1 */
-  
-  }
-  
-  form {
+
+}
+
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  label {
+}
+
+label {
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
     color: var(--text-color);
 
-  }
+}
 
-  td {
-
-    color: var(--text-color);
-
-  }
-
-
-  
-  strong {
+td {
 
     color: var(--text-color);
 
-  }
+}
 
-  
-  .btn.btn-info {
 
-    color: var(--text-color);
-
-  }
-
-  .btn.btn-primary {
+strong {
 
     color: var(--text-color);
 
-  }
+}
 
-  .btn.btn-success {
+
+.btn.btn-info {
+
+    color: var(--text-color);
+
+}
+
+.btn.btn-primary {
+
+    color: var(--text-color);
+
+}
+
+.btn.btn-success {
 
     color: var(--bkg-color);
     padding: 0.5rem 1rem;
@@ -149,29 +150,29 @@ body {
     font-size: 1.2rem;
     cursor: pointer;
     transition: all 0.3s ease;
-  }
-  
-  .btn-success:hover {
+}
+
+.btn-success:hover {
     background-color: var(--text-color);
 
-  }
-  
+}
 
-  .btn.btn-danger {
+
+.btn.btn-danger {
 
     color: var(--text-color);
 
-  }
-  
-  input[type="text"] {
+}
+
+input[type="text"] {
     padding: 0.5rem;
     border-radius: 5px;
     border: none;
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
     margin-bottom: 1.5rem;
-  }
-  
-  button[type="submit"] {
+}
+
+button[type="submit"] {
     padding: 0.5rem 1rem;
     border-radius: 5px;
     border: none;
@@ -180,9 +181,8 @@ body {
     font-size: 1.2rem;
     cursor: pointer;
     transition: all 0.3s ease;
-  }
-  
-  button[type="submit"]:hover {
+}
+
+button[type="submit"]:hover {
     background-color: #1f1f1f;
-  }
-  
+}
