--- a/src/app/liste-devices/liste-devices.component.html
+++ b/src/app/liste-devices/liste-devices.component.html
@@ -19,8 +19,8 @@
             <td>{{ message.body }}</td>
             <td>{{ message.deviceId }}</td>
 <!--            <td>-->
-<!--                <a href="#" [routerLink]="['/message/', post.id, 'view']" class="btn btn-info">Voir</a>-->
-<!--                <a href="#" [routerLink]="['/message/', post.id, 'edit']" class="btn btn-primary">Éditer</a>-->
+<!--                <a href="#" [routerLink]="['/liste-devices/', post.id, 'view']" class="btn btn-info">Voir</a>-->
+<!--                <a href="#" [routerLink]="['/liste-devices/', post.id, 'edit']" class="btn btn-primary">Éditer</a>-->
 <!--                <button type="button" (click)="deletePost(post.id)" class="btn btn-danger">Supprimer</button>-->
 <!--            </td>-->
         </tr>
