--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,6 +4,6 @@
   <a routerLink="/liste-devices">Liste des devices</a>
   <a routerLink="/liste-messages">Liste des messages</a>
   <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
-  <a routerLink="/message/create">Ajouter un device</a>
+  <a routerLink="/liste-devices/create">Ajouter un device</a>
   <button (click)="toggleDarkTheme()">Toggle Light/Dark mode</button>
 </nav>
