--- a/src/app/post/edit/edit.component.html
+++ b/src/app/post/edit/edit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Éditer le message</h1>
    
-    <a href="#" routerLink="/message/index" class="btn btn-primary">Retour</a>
+    <a href="#" routerLink="/liste-devices/index" class="btn btn-primary">Retour</a>
 
     <br>
           
