--- a/src/app/post/create/create.component.html
+++ b/src/app/post/create/create.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <h1>Ajouter un device</h1>
   
-    <a href="#" routerLink="/message/index" class="btn btn-primary">Retour</a>
+    <a href="#" routerLink="/liste-devices" class="btn btn-primary">Retour</a>
         
     <br>
 
     <form [formGroup]="form" (ngSubmit)="submit()">
   
         <div class="form-group">
-            <label for="title">IP:</label>
+            <label for="title">Device id (retourné par ADB)	:</label>
             <!-- <label>Nom du fournisseur</label>
             <input type="text" name="nom" [(ngModel)]="model.name">
           
@@ -20,12 +20,12 @@
                 type="text" 
                 class="form-control">
             <div *ngIf="f['title'].touched && f['title'].invalid" class="alert alert-danger">
-                <div *ngIf="f['title'].errors && f['title'].errors['required']">IP requise.</div>
+                <div *ngIf="f['title'].errors && f['title'].errors['required']">Device id requis.</div>
             </div>
         </div>
   
         <div class="form-group">
-            <label for="body">Contenu :</label>
+            <label for="body">Libellé :</label>
             <textarea 
                 formControlName="body"
                 id="body" 
@@ -33,7 +33,7 @@
                 class="form-control">
             </textarea>
             <div *ngIf="f['body'].touched && f['body'].invalid" class="alert alert-danger">
-                <div *ngIf="f['body'].errors && f['body'].errors['required']">Contenu requis.</div>
+                <div *ngIf="f['body'].errors && f['body'].errors['required']">Libellé requis.</div>
             </div>
         </div>
   
