changement affichage date + rework page d'accueil

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -14,7 +14,7 @@
 <!--            <th width="220px">Action</th>-->
         </tr>
         <tr *ngFor="let message of messages">
-            <td>{{ message.date }}</td>
+            <td>{{ message.date | date: 'dd/MM/YYYY h:mm:ss a' }}</td>
             <td>{{ message.address }}</td>
             <td>{{ message.body }}</td>
             <td>{{ message.deviceId }}</td>
