--- a/src/app/post/view/view.component.html
+++ b/src/app/post/view/view.component.html
@@ -6,16 +6,10 @@
 
     <br>
 
-    <div style="text-align: center;">
-        <strong>IP :</strong>
-        <p class="form-control" readonly *ngIf="message">{{ message.id }}</p>
-    </div>
-
-    <br>
 
     <div style="text-align: center;">
         <strong>Url :</strong>
-        <p class="form-control" readonly *ngIf="message">{{ message.name }}</p>
+        <p class="form-control" readonly *ngIf="message">{{ message.body }}</p>
     </div>
 
 </div>
