code rework, device page fully completed, code cleanup

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -10,6 +10,7 @@
             <th>Date </th>
             <th>Fournisseur </th>
             <th>Contenu </th>
+            <th>Label</th>
             <th>Device Id</th>
            <!-- <th width="220px">Action</th> -->
         </tr>
@@ -17,6 +18,7 @@
             <td>{{ message.date | date: 'dd/MM/YYYY h:mm:ss a' }}</td>
             <td>{{ message.address }}</td>
             <td>{{ message.body }}</td>
+            <td>{{ message.label }}</td>
             <td>{{ message.deviceId }}</td>
            <!-- <td>
                <a href="#" [routerLink]="['/liste-devices/', message.body, 'view']" class="btn btn-info">Voir</a>
