--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -12,11 +12,10 @@
         <th width="220px">Action</th>
       </tr>
       <tr *ngFor="let item of items">
-        <td>{{ item.id }}</td>
+        <td>{{ item.deviceId }}</td>
         <td>{{ item.label }}</td>
         <td>
-
-          <a href="#" [routerLink]="['/liste-devices/', item.id, 'view']" class="btn btn-info">Voir</a>
+          <a href="javascript:;" *ngIf="item.id" (click)="deleteDeviceNameMapping(item.id)" class="btn btn-info">Supprimer</a>
 
         </td>
       </tr>
