--- a/src/app/devices/add-device/add-device.component.html
+++ b/src/app/devices/add-device/add-device.component.html
@@ -1,10 +1,13 @@
 <h1>Ajouter une correspondante device -> nom</h1>
 
 <div>
-  <label>Device Id</label>
-  <input type="text" [(ngModel)]="createDeviceNameMappingModel.deviceId">
-  <input type="text" [(ngModel)]="createDeviceNameMappingModel.label">
+    <label>Device Id</label>
+    <input type="text" [(ngModel)]="createDeviceNameMappingModel.deviceId">
+    <input type="text" [(ngModel)]="createDeviceNameMappingModel.label">
 
-  <button class="btn btn-primary" [disabled]="!createDeviceNameMappingModel.deviceId || !createDeviceNameMappingModel.label" (click)="addNewModel()">Ajouter</button>
+    <button class="btn btn-primary"
+            [disabled]="!createDeviceNameMappingModel.deviceId || !createDeviceNameMappingModel.label"
+            (click)="addNewModel()">Ajouter
+    </button>
 
 </div>
