--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <h1>Accueil</h1>
-  
-  <h2>Bienvenue sur l'application AngularApp en ligne de SMSRecovery, ou vous pouvez consulter, ajouter, et éditer vos messages et fournisseurs de vos appareils connectés depuis notre interface</h2>
- </div>
+
+    <h2>Bienvenue sur l'application AngularApp en ligne de SMSRecovery, ou vous pouvez consulter, ajouter, et éditer vos
+        messages et fournisseurs de vos appareils connectés depuis notre interface</h2>
+</div>
