Renamed Liste des Devices to Correspondance des devices

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/home">Accueil</a>
     <a routerLink="/liste-messages">Liste des messages</a>
     <a routerLink="/liste-fournisseurs">Liste des fournisseurs</a>
-    <a routerLink="/liste-devices">Liste des devices</a>
+    <a routerLink="/liste-devices">Correspondance des devices</a>
     <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
     <a routerLink="/liste-devices/create">Ajouter un device</a>
     <button (click)="toggleDarkTheme()">Toggle Light/Dark mode</button>
