--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Liste des devices</h1>
+    <h1>Correspondance des devices</h1>
 
     <a href="#" routerLink="/liste-devices/create" class="btn btn-success">Ajouter un device</a>
 
