--- a/src/app/devices/add-device/add-device.component.html
+++ b/src/app/devices/add-device/add-device.component.html
@@ -1,8 +1,11 @@
 <h1>Ajouter une correspondante device -> nom</h1>
 
-<div>
+<br>
+
+<form>
     <label>Device Id</label>
     <input type="text" [(ngModel)]="createDeviceNameMappingModel.deviceId">
+    <label>Libellé</label>
     <input type="text" [(ngModel)]="createDeviceNameMappingModel.label">
 
     <button class="btn btn-primary"
@@ -10,4 +13,5 @@
             (click)="addNewModel()">Ajouter
     </button>
 
-</div>
+</form>
+
